<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".activity.LoginView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/dim_30"
            android:layout_height="@dimen/dim_30"
            android:src="@drawable/arrow_left" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/header"
            android:layout_width="@dimen/dim_80"
            android:layout_height="@dimen/dim_80"

            android:layout_marginBottom="10dp"
            android:src="@drawable/nologin_header"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="@dimen/dim_sp_20"
                />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="@dimen/dim_400"
                android:layout_height="@dimen/dim_36"
                android:layout_marginLeft="10dp"
                android:paddingStart="@dimen/dp_10"
                android:background="@drawable/login_edit_back"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dim_sp_20"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="@dimen/dim_400"
                android:layout_height="@dimen/dim_36"
                android:inputType="textPassword"
                android:layout_marginLeft="10dp"
                android:paddingStart="@dimen/dp_10"
                android:background="@drawable/login_edit_back"/>




        </LinearLayout>


        <TextView
            android:id="@+id/login"
            android:layout_width="@dimen/dim_180"
            android:layout_height="@dimen/dim_36"
            android:text="@string/login"
            android:textSize="@dimen/dim_sp_20"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_botton_back"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#5E5E5E"
                android:textSize="@dimen/dim_sp_14"
                android:text="@string/still_have_no_account"/>
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#A972B8"
                android:textSize="@dimen/dim_sp_14"
                android:text="@string/register"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>