<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MallGroupBuying">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.youth.banner.Banner
                android:id="@+id/banner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:layout_marginStart="18dp">

                <ImageView
                    android:id="@+id/shop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/mall" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop"
                    android:textColor="#ffffffff"
                    android:layout_marginTop="@dimen/dim_14"
                    android:layout_marginStart="@dimen/dim_14"
                    android:textSize="@dimen/dim_sp_38" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:layout_marginStart="18dp">

                <ImageView
                    android:id="@+id/shop_together"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/group" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_buying"
                    android:textColor="#ffffffff"
                    android:layout_marginTop="@dimen/dim_14"
                    android:layout_marginStart="@dimen/dim_14"
                    android:textSize="@dimen/dim_sp_38" />
            </RelativeLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kill_goods"
                android:textColor="#ff90a2fc"
                android:textSize="@dimen/sp_14" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/see_all"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/see_all"
                android:textColor="#ff5656c0"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@mipmap/arrow_right_mall" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/maill_goods_list_back"
            android:gravity="center"
            android:orientation="horizontal">



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/good_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />



        </LinearLayout>

    </LinearLayout>

</FrameLayout>